--- a/WebsiteDental/Views/Home/Index.cshtml
+++ b/WebsiteDental/Views/Home/Index.cshtml
@@ -104,159 +104,14 @@
 </div>
 <!-- About End -->
 
-
 <!-- Service Start -->
-<div class="container-fluid service py-5">
-    <div class="container py-5">
-        <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
-            <h4 class="text-primary">DỊCH VỤ</h4>
-            <h1 class="display-4 mb-4">Răng khỏe – Cười xinh – Tự tin tỏa sáng!</h1>
-            <p class="mb-0">
-                Chúng tôi cam kết mang đến dịch vụ nha khoa chất lượng cao với công nghệ hiện đại, đội ngũ bác sĩ giàu kinh nghiệm
-                và quy trình chăm sóc tận tâm. Mỗi khách hàng đều được thăm khám kỹ lưỡng, tư vấn giải pháp phù hợp để đảm bảo sức khỏe răng miệng tốt nhất.
-            </p>
-        </div>
-
-        <div class="row g-4 justify-content-center">
-            <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.2s">
-                <div class="service-item">
-                    <div class="service-img">
-                        <img src="~/assets/img/blog-1.png" class="img-fluid rounded-top w-100" alt="">
-                        <div class="service-icon p-3">
-                            <i class="fa fa-users fa-2x"></i>
-                        </div>
-                    </div>
-                    <div class="service-content p-4">
-                        <div class="service-content-inner">
-                            <a href="#" class="d-inline-block h4 mb-4">Life Insurance</a>
-                            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, eum!</p>
-                            <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Read More</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.4s">
-                <div class="service-item">
-                    <div class="service-img">
-                        <img src="~/assets/img/blog-2.png" class="img-fluid rounded-top w-100" alt="">
-                        <div class="service-icon p-3">
-                            <i class="fa fa-hospital fa-2x"></i>
-                        </div>
-                    </div>
-                    <div class="service-content p-4">
-                        <div class="service-content-inner">
-                            <a href="#" class="d-inline-block h4 mb-4">Health Insurance</a>
-                            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, eum!</p>
-                            <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Read More</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.6s">
-                <div class="service-item">
-                    <div class="service-img">
-                        <img src="~/assets/img/blog-3.png" class="img-fluid rounded-top w-100" alt="">
-                        <div class="service-icon p-3">
-                            <i class="fa fa-car fa-2x"></i>
-                        </div>
-                    </div>
-                    <div class="service-content p-4">
-                        <div class="service-content-inner">
-                            <a href="#" class="d-inline-block h4 mb-4">Car Insurance</a>
-                            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, eum!</p>
-                            <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Read More</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-6 col-lg-6 col-xl-3 wow fadeInUp" data-wow-delay="0.8s">
-                <div class="service-item">
-                    <div class="service-img">
-                        <img src="~/assets/img/blog-4.png" class="img-fluid rounded-top w-100" alt="">
-                        <div class="service-icon p-3">
-                            <i class="fa fa-home fa-2x"></i>
-                        </div>
-                    </div>
-                    <div class="service-content p-4">
-                        <div class="service-content-inner">
-                            <a href="#" class="d-inline-block h4 mb-4">Home Insurance</a>
-                            <p class="mb-4">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis, eum!</p>
-                            <a class="btn btn-primary rounded-pill py-2 px-4" href="#">Read More</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-12 text-center wow fadeInUp" data-wow-delay="0.2s">
-                <a class="btn btn-primary rounded-pill py-3 px-5" href="#">More Services</a>
-            </div>
-        </div>
-    </div>
-</div>
+@await Component.InvokeAsync("Services")
 <!-- Service End -->
 
-
-
-
-
-
-
 <!-- FAQs Start -->
-<div class="container-fluid faq-section bg-light py-5">
-    <div class="container py-5">
-        <div class="row g-5 align-items-center">
-            <div class="col-xl-6 wow fadeInLeft" data-wow-delay="0.2s">
-                <div class="h-100">
-                    <div class="mb-5">
-                        <h4 class="text-primary">Some Important FAQ's</h4>
-                        <h1 class="display-4 mb-0">Common Frequently Asked Questions</h1>
-                    </div>
-                    <div class="accordion" id="accordionExample">
-                        <div class="accordion-item">
-                            <h2 class="accordion-header" id="headingOne">
-                                <button class="accordion-button border-0" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                    Q: What happens during Freshers' Week?
-                                </button>
-                            </h2>
-                            <div id="collapseOne" class="accordion-collapse collapse show active" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-                                <div class="accordion-body rounded">
-                                    A: Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.
-                                </div>
-                            </div>
-                        </div>
-                        <div class="accordion-item">
-                            <h2 class="accordion-header" id="headingTwo">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                    Q: What is the transfer application process?
-                                </button>
-                            </h2>
-                            <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-                                <div class="accordion-body">
-                                    A: Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.
-                                </div>
-                            </div>
-                        </div>
-                        <div class="accordion-item">
-                            <h2 class="accordion-header" id="headingThree">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                    Q: Why should I attend community college?
-                                </button>
-                            </h2>
-                            <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-                                <div class="accordion-body">
-                                    A: Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-xl-6 wow fadeInRight" data-wow-delay="0.4s">
-                <img src="~/assets/img/carousel-2.png" class="img-fluid w-100" alt="">
-            </div>
-        </div>
-    </div>
-</div>
+@await Component.InvokeAsync("FQAs")
 <!-- FAQs End -->
+
 <!-- Blog Start -->
 <div class="container-fluid blog py-5">
     <div class="container py-5">
