Code thêm khuyễn mãi

--- a/WebsiteDental/wwwroot/assets/css/style_Image.css
+++ b/WebsiteDental/wwwroot/assets/css/style_Image.css
@@ -170,4 +170,4 @@ h1 {
         max-width: 100%;
     }
 }
-/* css phần dịch vụ ngoài trang index*/
+/* css phần khuyễn mãi/ giảm giá ngoài trang index*/
