--- a/WebsiteDental/wwwroot/assets/css/style_Service.css
+++ b/WebsiteDental/wwwroot/assets/css/style_Service.css
@@ -475,3 +475,5 @@ body {
         transform: translateX(-3px);
     }
 }
+
+/*/////////////////////////////////////////////////////////////////////*/
