--- a/WebsiteDental/Views/Home/Index.cshtml
+++ b/WebsiteDental/Views/Home/Index.cshtml
@@ -28,81 +28,12 @@
     </div>
 </div>
 <!-- Carousel End -->
+<!-- Discounts Start -->
+@await Component.InvokeAsync("Discounts")
+<!-- Discounts End -->
 @await Component.InvokeAsync("ServiceFeatures")
 
 @await Component.InvokeAsync("ImageGallery")
-
-<!-- About Start -->
-<div class="container-fluid bg-light about pb-5">
-    <div class="container pb-5">
-        <div class="row g-5">
-            <div class="col-xl-6 wow fadeInLeft" data-wow-delay="0.2s">
-                <div class="about-item-content bg-white rounded p-5 h-100">
-                    <h4 class="text-primary">About Our Company</h4>
-                    <h1 class="display-4 mb-4">High Range of Exploring Protection</h1>
-                    <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sunt debitis sint tempora. Corporis consequatur illo blanditiis voluptates aperiam quos aliquam totam aliquid rem explicabo,
-                    </p>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae praesentium recusandae eligendi modi hic
-                    </p>
-                    <p class="text-dark"><i class="fa fa-check text-primary me-3"></i>We can save your money.</p>
-                    <p class="text-dark"><i class="fa fa-check text-primary me-3"></i>Production or trading of good</p>
-                    <p class="text-dark mb-4"><i class="fa fa-check text-primary me-3"></i>Our life insurance is flexible</p>
-                    <a class="btn btn-primary rounded-pill py-3 px-5" href="#">More Information</a>
-                </div>
-            </div>
-            <div class="col-xl-6 wow fadeInRight" data-wow-delay="0.2s">
-                <div class="bg-white rounded p-5 h-100">
-                    <div class="row g-4 justify-content-center">
-                        <div class="col-12">
-                            <div class="rounded bg-light">
-                                <img src="~/assets/img/about-1.png" class="img-fluid rounded w-100" alt="">
-                            </div>
-                        </div>
-                        <div class="col-sm-6">
-                            <div class="counter-item bg-light rounded p-3 h-100">
-                                <div class="counter-counting">
-                                    <span class="text-primary fs-2 fw-bold" data-toggle="counter-up">129</span>
-                                    <span class="h1 fw-bold text-primary">+</span>
-                                </div>
-                                <h4 class="mb-0 text-dark">Insurance Policies</h4>
-                            </div>
-                        </div>
-                        <div class="col-sm-6">
-                            <div class="counter-item bg-light rounded p-3 h-100">
-                                <div class="counter-counting">
-                                    <span class="text-primary fs-2 fw-bold" data-toggle="counter-up">99</span>
-                                    <span class="h1 fw-bold text-primary">+</span>
-                                </div>
-                                <h4 class="mb-0 text-dark">Awards WON</h4>
-                            </div>
-                        </div>
-                        <div class="col-sm-6">
-                            <div class="counter-item bg-light rounded p-3 h-100">
-                                <div class="counter-counting">
-                                    <span class="text-primary fs-2 fw-bold" data-toggle="counter-up">556</span>
-                                    <span class="h1 fw-bold text-primary">+</span>
-                                </div>
-                                <h4 class="mb-0 text-dark">Skilled Agents</h4>
-                            </div>
-                        </div>
-                        <div class="col-sm-6">
-                            <div class="counter-item bg-light rounded p-3 h-100">
-                                <div class="counter-counting">
-                                    <span class="text-primary fs-2 fw-bold" data-toggle="counter-up">967</span>
-                                    <span class="h1 fw-bold text-primary">+</span>
-                                </div>
-                                <h4 class="mb-0 text-dark">Team Members</h4>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- About End -->
 
 <!-- Service Start -->
 @await Component.InvokeAsync("Services")
@@ -126,7 +57,7 @@
             <div class="col-lg-6 col-xl-4 wow fadeInUp" data-wow-delay="0.2s">
                 <div class="blog-item">
                     <div class="blog-img">
-                        <img src="~/assets/img/blog-1.png" class="img-fluid rounded-top w-100" alt="">
+                        <img src="~/assets/img/Gallery//anh3.jpg" class="img-fluid rounded-top w-100" alt="">
                         <div class="blog-categiry py-2 px-4">
                             <span>Business</span>
                         </div>
