--- a/WebsiteDental/Views/Shared/Components/MenuTop/Default.cshtml
+++ b/WebsiteDental/Views/Shared/Components/MenuTop/Default.cshtml
@@ -6,14 +6,12 @@
     var username = HttpContextAccessor.HttpContext.Session.GetString("Username");
 }
 
-  
-<!-- Navbar & Hero Start -->
 <!-- Navbar & Hero Start -->
 <div class="container-fluid nav-bar">
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light px-0">
             <a href="#" class="navbar-brand">
-                <h1 class="text-primary"><i class="fab fa-slack me-2"></i>WebDental</h1>
+                <h1 class="text-primary"><i class="fab fa-slack me-2"></i>LTN-Dental</h1>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars"></span>
