--- a/WebsiteDental/Views/Shared/_Layout.cshtml
+++ b/WebsiteDental/Views/Shared/_Layout.cshtml
@@ -31,6 +31,8 @@
     <link href="~/assets/css/style_menu.css" rel="stylesheet">
     <link href="~/assets/css/style_Image.css" rel="stylesheet">
     <link href="~/assets/css/style_Service.css" rel="stylesheet">
+    <link href="~/assets/css/style_Discounts.css" rel="stylesheet">
+
 </head>
 
 <body>
