--- a/WebsiteDental/Views/Shared/_Layout.cshtml
+++ b/WebsiteDental/Views/Shared/_Layout.cshtml
@@ -32,6 +32,7 @@
     <link href="~/assets/css/style_Image.css" rel="stylesheet">
     <link href="~/assets/css/style_Service.css" rel="stylesheet">
     <link href="~/assets/css/style_Discounts.css" rel="stylesheet">
+    <link href="~/assets/css/style_doctors.css" rel="stylesheet">
 
 </head>
 
