--- a/WebsiteDental/Views/Home/Index.cshtml
+++ b/WebsiteDental/Views/Home/Index.cshtml
@@ -8,9 +8,10 @@
                         <div class="text-sm-center text-md-start">
                             <h4 class="text-white text-uppercase fw-bold mb-4">Điều trị tận tâm - Phục hồi nụ cười tự tin</h4>
                             <h1 class="display-1 text-white mb-4">Răng - Hàm - Mặt</h1>
-                            <p class="mb-5 fs-5">
+                            <p class="mb-5 fs-5" style="color: white !important;">
                                 Tại WebsiteDental, chúng tôi tin rằng mỗi bệnh nhân đều xứng đáng được chăm sóc cá nhân hóa và tôn trọng. Chúng tôi lắng nghe mọi lo lắng của bạn, giải thích chi tiết về tình trạng và phương pháp điều trị, đồng thời đảm bảo bạn hoàn toàn thoải mái trong suốt quá trình thăm khám.
                             </p>
+
                             <div class="d-flex justify-content-center justify-content-md-start flex-shrink-0 mb-4">
                                 <a class="btn btn-light rounded-pill py-3 px-4 px-md-5 me-2" href="#"><i class="fas fa-play-circle me-2"></i> Liên hệ ngay!</a>
                                 <a class="btn btn-dark rounded-pill py-3 px-4 px-md-5 ms-2" href="#">Đặt lịch khám trực tuyến</a>
@@ -49,8 +50,6 @@
 <!-- Blog Start -->
 @await Component.InvokeAsync("BlogPosts")
 <!-- Blog End -->
-
-
 
 <!-- Testimonial Start -->
 @await Component.InvokeAsync("CustomerReviews")
