--- a/WebsiteDental/Views/Shared/Components/BlogPosts/Default.cshtml
+++ b/WebsiteDental/Views/Shared/Components/BlogPosts/Default.cshtml
@@ -5,7 +5,7 @@
         <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
             <h4 class="text-primary">Tin Tức & Cập Nhật</h4>
             <h1 class="display-4 mb-4">Xu Hướng & Tin Mới</h1>
-            <p class="mb-0">
+            <p class="mb-0" style="color: #0a4776;">
                 Chăm sóc răng miệng đúng cách không chỉ giúp bạn có nụ cười đẹp mà còn góp phần bảo vệ sức khỏe toàn diện. Theo các chuyên gia nha khoa, việc vệ sinh răng miệng đúng cách, kết hợp khám răng định kỳ có thể giảm nguy cơ sâu răng, viêm nướu và các bệnh lý nguy hiểm như viêm nha chu.
             </p>
         </div>
@@ -32,7 +32,7 @@
                             <div class="small"><span class="fa fa-comment-alt text-primary"></span>@n.ViewCount</div>
                         </div>
                         <a href="#" class="h4 d-inline-block mb-3">@n.Title</a>
-                        <p class="mb-3">@n.Content</p>
+                            <p class="mb-3" style="color: #0a4776;">@n.Content</p>
                         <a href="#" class="btn p-0">ĐỌC THÊM  <i class="fa fa-arrow-right"></i></a>
                     </div>
                 </div>
