--- a/WebsiteDental/Views/Shared/Components/Discounts/Default.cshtml
+++ b/WebsiteDental/Views/Shared/Components/Discounts/Default.cshtml
@@ -5,7 +5,7 @@
         <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
             <h4 class="text-primary">Khuyễn Mãi Độc Quyền</h4>
             <h1 class="display-4 mb-4">"Hãy làm đẹp cho chính mình để tự tin toả sáng."</h1>
-            <p class="mb-0">
+            <p class="mb-0" style="color: #0a4776;">
                 Nhằm mang đến dịch vụ chăm sóc răng miệng tốt nhất với chi phí hợp lý, phòng khám răng hàm mặt của chúng tôi thường xuyên triển khai các gói khuyến mãi hấp dẫn dành cho khách hàng. Hiện tại, phòng khám đang có chương trình giảm giá lên đến 30% cho các dịch vụ tẩy trắng răng, niềng răng và cạo vôi răng trong tháng này.
             </p>
         </div>
