--- a/WebsiteDental/Views/Shared/Components/Doctors/Default.cshtml
+++ b/WebsiteDental/Views/Shared/Components/Doctors/Default.cshtml
@@ -34,7 +34,8 @@
                         </div>
                         <div class="team-title p-3">
                             <h5 class="mb-0">@doctor.FullName</h5>
-                            <p class="mb-1 small">@doctor.Phone</p>
+                            <p class="mb-1 small" style="color: white !important;">@doctor.Phone</p>
+
                             <a href="#appointment" class="btn btn-primary btn-sm rounded-pill py-1 px-3">Đặt lịch khám</a>
                         </div>
                     </div>
@@ -59,7 +60,7 @@
                         </div>
                         <div class="team-title p-3">
                             <h5 class="mb-0">@doctor.FullName</h5>
-                            <p class="mb-1 small">@doctor.Phone</p>
+                            <p class="mb-1 small" style="color: white !important;" >@doctor.Phone</p>
                             <a href="#appointment" class="btn btn-primary btn-sm rounded-pill py-1 px-3">Đặt lịch khám</a>
                         </div>
                     </div>
