--- a/WebsiteDental/Views/Shared/Components/FQAs/Default.cshtml
+++ b/WebsiteDental/Views/Shared/Components/FQAs/Default.cshtml
@@ -26,7 +26,7 @@
                 <div class="faq-card-content">
                     <h3 class="faq-card-title">@n.Question</h3>
                     <div class="faq-card-body">
-                        <p> @n.Answer</p>
+                            <p style="color: #0a4776;" > @n.Answer</p>
                     </div>
                 </div>
             </div>
