--- a/WebsiteDental/Views/Shared/_Layout.cshtml
+++ b/WebsiteDental/Views/Shared/_Layout.cshtml
@@ -80,10 +80,10 @@
                             <div class="col-md-6 col-lg-6 col-xl-5">
                                 <div class="footer-item">
                                     <a href="index.html" class="p-0">
-                                        <h3 class="text-white"><i class="fab fa-slack me-3"></i> LifeSure</h3>
+                                        <h3 class="text-white"><i class="fab fa-slack me-3"></i> LTN-WebsiteDental</h3>
                                         <!-- <img src="img/logo.png" alt="Logo"> -->
                                     </a>
-                                    <p class="text-white mb-4">Dolor amet sit justo amet elitr clita ipsum elitr est.Lorem ipsum dolor sit amet, consectetur adipiscing...</p>
+                                    <p class="text-white mb-4" >Đem lại sự tự tin với nụ cười rạng rỡ! Chúng tôi cung cấp dịch vụ nha khoa chất lượng cao với đội ngũ bác sĩ giàu kinh nghiệm.</p>
                                     <div class="footer-btn d-flex">
                                         <a class="btn btn-md-square rounded-circle me-3" href="#"><i class="fab fa-facebook-f"></i></a>
                                         <a class="btn btn-md-square rounded-circle me-3" href="#"><i class="fab fa-twitter"></i></a>
@@ -94,13 +94,13 @@
                             </div>
                             <div class="col-md-6 col-lg-6 col-xl-3">
                                 <div class="footer-item">
-                                    <h4 class="text-white mb-4">Useful Links</h4>
-                                    <a href="#"><i class="fas fa-angle-right me-2"></i> About Us</a>
-                                    <a href="#"><i class="fas fa-angle-right me-2"></i> Features</a>
-                                    <a href="#"><i class="fas fa-angle-right me-2"></i> Services</a>
+                                    <h4 class="text-white mb-4">Liên kết nhanh</h4>
+                                    <a href="#"><i class="fas fa-angle-right me-2"></i> Giới thiệu</a>
+                                    <a href="#"><i class="fas fa-angle-right me-2"></i> Dịch vụ</a>
+                                    <a href="#"><i class="fas fa-angle-right me-2"></i> Đội ngũ bác sĩ</a>
                                     <a href="#"><i class="fas fa-angle-right me-2"></i> FAQ's</a>
-                                    <a href="#"><i class="fas fa-angle-right me-2"></i> Blogs</a>
-                                    <a href="#"><i class="fas fa-angle-right me-2"></i> Contact</a>
+                                    <a href="#"><i class="fas fa-angle-right me-2"></i> Tin tức </a>
+                                    <a href="#"><i class="fas fa-angle-right me-2"></i> Liên hệ</a>
                                 </div>
                             </div>
                             <div class="col-md-6 col-lg-6 col-xl-4">
@@ -171,7 +171,7 @@
                                             </div>
                                             <div>
                                                 <h4 class="text-white">Address</h4>
-                                                <p class="mb-0">123 Street New York.USA</p>
+                                                <p class="mb-0">+)Số 138, Nguyễn Thiếp - Vinh - Nghệ An</p>
                                             </div>
                                         </div>
                                     </div>
@@ -182,7 +182,7 @@
                                             </div>
                                             <div>
                                                 <h4 class="text-white">Mail Us</h4>
-                                                <p class="mb-0">info@example.com</p>
+                                                <p class="mb-0">letrongnghia342@gmail.com</p>
                                             </div>
                                         </div>
                                     </div>
@@ -192,8 +192,8 @@
                                                 <i class="fa fa-phone-alt fa-2x"></i>
                                             </div>
                                             <div>
-                                                <h4 class="text-white">Telephone</h4>
-                                                <p class="mb-0">(+012) 3456 7890</p>
+                                                <h4 class="text-white">Điện thoại:</h4>
+                                                <p class="mb-0">(+084) 835731781</p>
                                             </div>
                                         </div>
                                     </div>
@@ -205,8 +205,8 @@
 
                 <div class="col-xl-3">
                     <div class="footer-item">
-                        <h4 class="text-white mb-4">Newsletter</h4>
-                        <p class="text-white mb-3">Dolor amet sit justo amet elitr clita ipsum elitr est.Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <h4 class="text-white mb-4">Chăm sóc nụ cười của bạn</h4>
+                        <p class="text-white mb-3">Đem lại sự tự tin với nụ cười rạng rỡ! </p>
                         <div class="position-relative rounded-pill mb-4">
                             <input class="form-control rounded-pill w-100 py-3 ps-4 pe-5" type="text" placeholder="Enter your email">
                             <button type="button" class="btn btn-primary rounded-pill position-absolute top-0 end-0 py-2 mt-2 me-2">SignUp</button>
@@ -231,26 +231,10 @@
         </div>
     </div>
     <!-- Footer End -->
-    <!-- Copyright Start -->
-    <div class="container-fluid copyright py-4">
-        <div class="container">
-            <div class="row g-4 align-items-center">
-                <div class="col-md-6 text-center text-md-end mb-md-0">
-                    <span class="text-body"><a href="#" class="border-bottom text-white"><i class="fas fa-copyright text-light me-2"></i>Your Site Name</a>, All right reserved.</span>
-                </div>
-                <div class="col-md-6 text-center text-md-start text-body">
-                    <!--/*** This template is free as long as you keep the below author’s credit link/attribution link/backlink. ***/-->
-                    <!--/*** If you'd like to use the template without the below author’s credit link/attribution link/backlink, ***/-->
-                    <!--/*** you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". ***/-->
-                    Designed By <a class="border-bottom text-white" href="https://htmlcodex.com">HTML Codex</a>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Copyright End -->
     <!-- Back to Top -->
     <a href="#" class="btn btn-primary btn-lg-square rounded-circle back-to-top"><i class="fa fa-arrow-up"></i></a>
 
+    @RenderSection("Styles", required: false)
 
     <!-- JavaScript Libraries -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
