--- a/WebsiteDental/Views/Shared/Components/CustomerReviews/Default.cshtml
+++ b/WebsiteDental/Views/Shared/Components/CustomerReviews/Default.cshtml
@@ -5,7 +5,7 @@
     <div class="container pb-5">
         <div class="testimonial-heading animate-fadeInUp">
             <h4>Khách Hàng Nói Gì Về Chúng Tôi?</h4>          
-            <p>
+            <p style="color: #0a4776;" >
                 Sự hài lòng của khách hàng luôn là động lực để chúng tôi không ngừng nâng cao chất lượng dịch vụ. Mỗi đánh giá, mỗi lời nhận xét đều là minh chứng rõ ràng nhất cho những nỗ lực không ngừng nghỉ của đội ngũ bác sĩ và nhân viên.
             </p>
         </div>
@@ -22,8 +22,8 @@
                         </div>
                         <div class="col-8 col-lg-8 col-xl-9">
                             <div class="d-flex flex-column my-auto text-start p-4">
-                                <h4 class="text-dark mb-0">@n.Customer</h4>
-                                <p class="mb-3">@n.Email</p>
+                                <h4 class="text-dark mb-0" style="color: #0a4776;">@n.Customer</h4>
+                                <p class="mb-3" style="color: #0a4776;">@n.Email</p>
                                 <div class="d-flex text-primary mb-3">
                                     @for (int i = 1; i <= @n.Rating; i++)
                                     {
@@ -31,7 +31,7 @@
                                     }
                        
                             </div>
-                            <p class="mb-0">
+                                <p class="mb-0" style="color: #0a4776;">
                                 @n.Review
                             </p>
                         </div>
