--- a/WebsiteDental/Views/Shared/Components/ServiceFeatures/Default.cshtml
+++ b/WebsiteDental/Views/Shared/Components/ServiceFeatures/Default.cshtml
@@ -5,7 +5,7 @@
         <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
             <h4 class="text-primary">Dịch vụ nổi bật</h4>
             <h1 class="display-4 mb-4">"Dịch vụ nha khoa chuyên nghiệp - Công nghệ tiên tiến"</h1>
-            <p class="mb-0">
+            <p class="mb-0" style="color: #0a4776;">
                 Phòng khám răng hàm mặt chúng tôi tự hào cung cấp các dịch vụ nha khoa toàn diện với công nghệ hiện đại và đội ngũ bác sĩ giàu kinh nghiệm. Chúng tôi cam kết mang đến những giải pháp điều trị hiệu quả, an toàn và thoải mái nhất cho mọi vấn đề răng miệng của bạn.
             </p>
         </div>
@@ -21,7 +21,7 @@
                         <i class="@n.Icon fa-3x"></i>
                     </div>
                     <h4 class="mb-4">@n.Title</h4>
-                    <p class="mb-4">
+                        <p class="mb-4" style="color: #0a4776;">
                        @n.Description
                     </p>
                     <a class="btn btn-primary rounded-pill py-2 px-4" href="#">XEM THÊM</a>
