--- a/WebsiteDental/Views/Shared/Components/Services/Default.cshtml
+++ b/WebsiteDental/Views/Shared/Components/Services/Default.cshtml
@@ -7,7 +7,7 @@
         <div class="text-center mx-auto pb-5 wow fadeInUp" data-wow-delay="0.2s" style="max-width: 800px;">
             <h4 class="text-primary">DỊCH VỤ</h4>
             <h1 class="display-4 mb-4">Răng khỏe – Cười xinh – Tự tin tỏa sáng!</h1>
-            <p class="mb-0">
+            <p class="mb-0" style="color: #0a4776;">
                 Chúng tôi cam kết mang đến dịch vụ nha khoa chất lượng cao với công nghệ hiện đại, đội ngũ bác sĩ giàu kinh nghiệm
                 và quy trình chăm sóc tận tâm. Mỗi khách hàng đều được thăm khám kỹ lưỡng, tư vấn giải pháp phù hợp để đảm bảo sức khỏe răng miệng tốt nhất.
             </p>
