--- a/WebsiteDental/wwwroot/assets/css/style.css
+++ b/WebsiteDental/wwwroot/assets/css/style.css
@@ -810,7 +810,7 @@
 
 .footer .footer-item a {
     line-height: 35px;
-    color: var(--bs-body);
+    color: rgba(255, 255, 255, 0.9);
     transition: 0.5s;
 }
 
@@ -876,9 +876,9 @@
     background: var(--bs-primary);
 }
 
-.footer .footer-item .footer-btn a:hover i {
-    color: var(--bs-white);
-}
+    .footer .footer-item .footer-btn a:hover i {
+        color: #acbbe4;     
+    }
 /*** Footer End ***/
 
 
@@ -893,5 +893,7 @@
     font-size: 2.5rem ;
 }
 
-
+p {
+    color: #0a4776 !important;
+}
 
