--- a/WebsiteDental/Views/Shared/_Layout.cshtml
+++ b/WebsiteDental/Views/Shared/_Layout.cshtml
@@ -180,8 +180,8 @@
                                 </a>
                             </div>
                             <div class="d-flex flex-column ms-3 flex-shrink-0">
-                                <span>Call to Our Experts</span>
-                                <a href="tel:+ 0123 456 7890"><span class="text-white">Free: + 0123 456 7890</span></a>
+                                <span>Hãy gọi cho chúng tôi!</span>
+                                <a href="tel:+ 0123 456 7890"><span class="text-white">+) 0835731781</span></a>
                             </div>
                         </div>
                     </div>
