--- a/WebsiteDental/wwwroot/assets/css/BlogPosts.css
+++ b/WebsiteDental/wwwroot/assets/css/BlogPosts.css
@@ -1,4 +1,36 @@
-﻿* {
+﻿
+/*css phần danh mục bài viết*/
+.top-navigation {
+    width: 100%;
+    background-color: #f8f9fa;
+}
+
+.top-navigation-container {
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.sidebar-categories {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    padding: 10px 0;
+    flex-wrap: wrap;
+}
+
+    .sidebar-categories a {
+        text-decoration: none;
+        color: #333;
+        padding: 5px 10px;
+        transition: color 0.3s ease;
+    }
+
+        .sidebar-categories a:hover {
+            color: #007bff;
+        }
+/*kết thúc css*/
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
