chi tiết bài viết

--- a/WebsiteDental/Views/Account/Register.cshtml
+++ b/WebsiteDental/Views/Account/Register.cshtml
@@ -51,7 +51,7 @@
                                     </div>
                                     <div class="mb-3 form-check">
                                         <input type="checkbox" class="form-check-input" id="rememberMe" name="rememberMe">
-                                        <label class="form-check-label" for="rememberMe">Ghi nhớ đăng nhập</label>
+                                        <label class="form-check-label" for="rememberMe" style="color: black;">Ghi nhớ đăng nhập</label>
                                     </div>
                                     <div class="d-grid">
                                         <button type="submit" class="btn btn-primary">Đăng nhập</button>
