--- a/WebsiteDental/Views/Shared/_Layout.cshtml
+++ b/WebsiteDental/Views/Shared/_Layout.cshtml
@@ -22,7 +22,8 @@
     <link href="~/assets/lib/lightbox/css/lightbox.min.css" rel="stylesheet">
     <link href="~/assets/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
 
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Customized Bootstrap Stylesheet -->
     <link href="~/assets/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -204,7 +205,7 @@
     <script src="~/assets/lib/counterup/counterup.min.js"></script>
     <script src="~/assets/lib/lightbox/js/lightbox.min.js"></script>
     <script src="~/assets/lib/owlcarousel/owl.carousel.min.js"></script>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Template Javascript -->
     <script src="~/assets/js/main.js"></script>
